--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,8 +1,8 @@
 ---
 new_page_extension: md
 auto_deploy: false
-admin_path: 
-webhook_url: 
+admin_path:
+webhook_url:
 sections:
 - type: directory
   path: src/content/founders
@@ -22,9 +22,9 @@ file_template: ":filename:"
 build:
   preview_env:
   - DEPLOY_PREVIEW=true
-  preview_output_directory: "/srv"
+  preview_output_directory: "dist"
   install_dependencies_command: npm install
-  preview_docker_image: node:16-alpine
+  preview_docker_image: node:16
   mount_path: "/srv"
   working_dir: "/srv"
-  instant_preview_command: npm run dev
+  instant_preview_command: npm run build:watch
