add contact page

--- a/.forestry/front_matter/templates/home-methodiek.yml
+++ b/.forestry/front_matter/templates/home-methodiek.yml
@@ -29,6 +29,6 @@ fields:
   config:
     required: true
   label: Button Navigation
-  description: Where to navigate to by clicking the button, e.g. /diensten or ./contact
+  description: Where to navigate to by clicking the button, e.g. /diensten or /contact
 pages:
 - src/content/home/2-methodiek.md
