--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "lit": "^2.0.0-rc.3"
+    "lit": "^2.0.2"
   },
   "prettier": {
     "tabWidth": 2,
