--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "bundle:drawer": "rollup -c rollup.config.js",
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "npm run bundle:drawer && astro build",
     "build:watch": "npm run build && concurrently \"chokidar '{src,public}/**/*' -c 'rimraf dist && npm run build'\" \"wds --root-dir dist\"",
     "build:preview": "DEPLOY_PREVIEW=true npm run build",
     "build:start": "npm run build && cd dist && http-server -o -c-1",
@@ -14,15 +15,18 @@
   },
   "devDependencies": {
     "@astrojs/renderer-lit": "^0.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@web/dev-server": "^0.1.25",
     "astro": "^0.20.12",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^6.3.0",
     "http-server": "^13.0.1",
     "prettier": "^2.4.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.60.0"
   },
   "dependencies": {
+    "@divriots/rev": "^0.1.3",
     "lit": "^2.0.2"
   },
   "prettier": {
