--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@example/starter",
+  "name": "code_founders_landing",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
-    "bundle:drawer": "rollup -c rollup.config.js",
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "npm run bundle:drawer && astro build",
+    "build": "astro build",
     "build:watch": "npm run build && concurrently \"chokidar '{src,public}/**/*' -c 'rimraf dist && npm run build'\" \"wds --root-dir dist\"",
     "build:preview": "DEPLOY_PREVIEW=true npm run build",
     "build:start": "npm run build && cd dist && http-server -o -c-1",
@@ -14,20 +14,21 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/renderer-lit": "^0.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@web/dev-server": "^0.1.25",
-    "astro": "^0.20.12",
+    "@astrojs/renderer-lit": "^0.3.1",
+    "@astrojs/renderer-react": "^0.4.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@web/dev-server": "^0.1.29",
+    "astro": "^0.22.20",
     "chokidar-cli": "^3.0.0",
-    "concurrently": "^6.3.0",
-    "http-server": "^13.0.1",
-    "prettier": "^2.4.1",
+    "concurrently": "^7.0.0",
+    "http-server": "^14.1.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.60.0"
+    "rollup": "^2.66.1"
   },
   "dependencies": {
-    "@divriots/rev": "^0.1.3",
-    "lit": "^2.0.2"
+    "@divriots/rev": "^0.1.10",
+    "lit": "^2.1.2"
   },
   "prettier": {
     "tabWidth": 2,
