--- a/.forestry/front_matter/templates/intro.yml
+++ b/.forestry/front_matter/templates/intro.yml
@@ -30,7 +30,7 @@ fields:
   config:
     required: true
   label: Button Navigation
-  description: Page to navigate to, for the action button. E.g. /diensten or /contact
+  description: Page to navigate to, for the action button. E.g. /opleidingen or /contact
 - name: unique_id
   type: text
   config:
