--- a/.forestry/front_matter/templates/home-methodiek.yml
+++ b/.forestry/front_matter/templates/home-methodiek.yml
@@ -29,7 +29,7 @@ fields:
   config:
     required: true
   label: Button Navigation
-  description: Where to navigate to by clicking the button, e.g. /diensten or /contact
+  description: Where to navigate to by clicking the button, e.g. /opleidingen or /contact
 - name: unique_id
   type: text
   config:
