--- a/.forestry/front_matter/templates/opleidingen.yml
+++ b/.forestry/front_matter/templates/opleidingen.yml
@@ -1,5 +1,5 @@
 ---
-label: Diensten
+label: Opleidingen
 hide_body: true
 fields:
 - name: heading
@@ -7,7 +7,7 @@ fields:
   config:
     required: true
   label: Heading
-  description: Heading text of the Diensten page
+  description: Heading text of the Opleidingen page
 - name: description
   type: textarea
   default: ''
@@ -17,6 +17,6 @@ fields:
     schema:
       format: markdown
   label: Description
-  description: Description text of Diensten page
+  description: Description text of Opleidingen page
 pages:
-- src/content/diensten/diensten.md
+- src/content/opleidingen/opleidingen.md
