--- a/.forestry/front_matter/templates/pitch-action-button.yml
+++ b/.forestry/front_matter/templates/pitch-action-button.yml
@@ -13,7 +13,7 @@ fields:
   config:
     required: false
   label: Pitch - Button Navigation
-  description: Where to navigate to from the pitch action button, e.g. /diensten or
+  description: Where to navigate to from the pitch action button, e.g. /opleidingen or
     /contact
 - name: unique_id
   type: text
