chore: remove preview__ to launch site

--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,8 +1,8 @@
 ---
 new_page_extension: md
 auto_deploy: false
-admin_path: 
-webhook_url: 
+admin_path:
+webhook_url:
 sections:
 - type: directory
   path: src/content/home
@@ -25,7 +25,7 @@ sections:
   create: all
   match: "**/*.md"
 - type: directory
-  path: src/pages/preview__/opleidingen
+  path: src/pages/opleidingen
   label: Opleidingen
   create: all
   match: "**/*.md"
