--- a/.forestry/front_matter/templates/pitch-action-button.yml
+++ b/.forestry/front_matter/templates/pitch-action-button.yml
@@ -2,13 +2,13 @@
 label: Pitch Action Button
 hide_body: true
 fields:
-- name: pitch-button_text
+- name: pitch_button_text
   type: text
   config:
     required: false
   label: Pitch - Button text
   description: Text inside the button in the pitch section
-- name: pitch-button_navigation
+- name: pitch_button_navigation
   type: text
   config:
     required: false
